# nik0s

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
docs/: cilium.md  k0s.md
lib/: airgap.nix  cluster.nix  cluster_opts.nix  helm.nix  node_opts.nix  test.nix
manifests/: digitalocean.nix
modules/: base_cluster.nix  cilium.nix  cluster.nix  default.nix  helm.nix
modules/k0s/: default.nix  k0s_yaml.nix  systemd.nix  user_manifests.nix  users.nix
overlays/: default.nix
scripts/: airgap_images  cilium_airgap_images  get_sum.sh  k0s_airgap_images
src/: cluster.json  cluster.rs  cmd.rs  flake.rs  lib.rs  main.rs  runner.rs  test.rs
src/cmd/: error.rs  install.rs
src/runner/: command.rs  local.rs  pipe.rs  ssh.rs
tests/: auth.nix  bootstrap-token-3afp28.yaml  bootstrap-token-kgrd7j.yaml  ca.crt  ca.key  default.nix  lib.nix  mkcluster.nix  simple-pair-cluster.nix  three-to-three-cluster.nix  token_3afp28.tv2yeb5yglibu9mu  token_kgrd7j.crmd8a8my7cmlw0r
